# tai

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: common.rs  config.rs  main.rs  utils.rs
src/arguments/: argument_parsing.rs  config.rs
src/config/: argument_parsing.rs  config.rs
src/operations/: #braille.rs#  ascii.rs  braille.rs  floyd_dither.rs  image_to_ascii.rs  image_to_braille.rs  image_to_onechar.rs  mod.rs  onechar.rs
src/utils/: image_to_ascii.rs  image_to_braille.rs  image_to_onechar.rs  mod.rs
